--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Make me into a grid!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,27 +13,35 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Raleway:wght@800&display=swap" rel="stylesheet">
+       <script src="https://kit.fontawesome.com/36770f768a.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
-            <div id="div-1" class="flex-items">
-                Div 1
+        <section class="wrapper">
+             <header>Hi. I'm Gladys. </header>
+               <main>
+                    <p>I am a web designer and front end developer who loves an eccletic mix of artistic styles. One day I'm feeling dark and edgy and another day, I might be feeling pink.</p>
+               </main>
+            <div class="div-1">
+               <p>I grew up in the small town of Alameda in  the San Francisco Bay Area. It was home to an amusement park destination call Neptune Beach from 1917 to 1939 that was known as the Coney Island of the West. </p>
             </div>
-            <div id="div-2" class="flex-items">
-                Div 2
+            <div class="div-2">
+               <p><strong>My passion: </strong>I love marshmallows! I'll eat Rocky Road bars, Mallo Cups, and just about any snack item that contains marshmallows. But, my most favorite marshmallow treat is the moon pie.</p>
             </div>
-            <div id="div-3" class="flex-items">
-                Div 3
+            <div class="div-3">
+               <p> <strong>A fun fact: </strong>Until recently, I had owned 1,000 PEZ dispensers. I had a couple of dispensers when I was a little kid but it wasn't until I was an adult in my twenties that I really started to collect PEZ as a hobby.</p>
             </div>
-            <footer>Footer</footer>
+            <footer>
+                 <ul>
+                      <li><i class="fab fa-instagram"></i> </li>
+                      <li><i class="fab fa-linkedin-in"></i> </li>
+                      <li><i class="fab fa-twitter"></i> </li>
+                 </ul>
+           </footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
